data/derived/comb/progs/unify/prog4409.ml.out
Characters 74-98:
  a::((i+j)/10, (i+j) mod 10) in
     ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
